# C_HW2

./: .travis.yml  CMakeLists.txt  README.md  cppcheck_report.txt  test.txt  test1.txt
.github/workflows/: cmake.yml
include/DZ2/: utils.h  with_fork.h  without_fork.h
src/: main.c  utils.c  with_fork.c  without_fork.c
test/: CMakeLists.txt  main.cpp  utils.cpp  with_fork.cpp  without_fork.cpp
